--- a/client/src/Pages/Cadastro/Cadastro.module.css
+++ b/client/src/Pages/Cadastro/Cadastro.module.css
@@ -1,6 +1,6 @@
 
 .container {
-    width: 85%;
+    width: 85% !important;
     height: 87vh;
     gap: 10px;
     margin: 0 auto;
@@ -73,13 +73,15 @@ form {
 
 
 form h1 {
-    margin-bottom: 3%;
+    margin-bottom: 10%;
+
+    font-weight: 700 !important;
+
 }
 
 /* Subtítulo */
 .subTitulo {
-    font-size: 14px;
-    font-weight: 600;
+    font-size: 14px !important;
     color: #695346;
     margin-bottom: 10%;
 }
