--- a/client/src/components/Button.css
+++ b/client/src/components/Button.css
@@ -9,6 +9,18 @@
     font-weight: 600 !important;
     border: none;
 }
+.otherBtn{
+    width: 140px;
+    font-size: 14px;
+    height: 48px;
+    background-color: #2B1B12;
+    border-radius: 8px;
+    color: white;
+    transition: 500ms;
+    font-weight: 600 !important;
+    border: none;
+    padding: 0 25px 0;
+}
 .btn_border{
     width: 140px;
     font-size: 14px;
@@ -19,6 +31,7 @@
     transition: 500ms;
     font-weight: 600 !important;
     border: solid #2B1B12 2px;
+
 }
 .btn-pequeno{
     width: 140px;
@@ -40,7 +53,6 @@
     transition: 500ms;
     font-weight: 600 !important;
     border: none;
-
     width: 100%;
 }
 .btn_border:hover{
